# django-ninja-apikey

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: release-drafter.yml
.github/workflows/: build.yml  main.yml  publish.yml  release-drafter.yml  release.yml
ninja_apikey/: __init__.py  admin.py  apps.py  models.py  security.py  tests.py
ninja_apikey/migrations/: 0001_initial.py
sample_project/sample_api/: api.py  apps.py  urls.py
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
