[tool.poetry]
name = "django-ninja-apikey"
version = "0.1.0"
description = "Easy to use API key authentication for Django Ninja REST Framework"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mawassk/django-ninja-apikey"
repository = "https://github.com/mawassk/django-ninja-apikey"
keywords = ["django", "rest", "ninja", "auth", "apikey"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = ["Maximilian Wassink <wassink.maximilian@protonmail.com>"]
packages = [{ include = "ninja_apikey" }]

[tool.poetry.dependencies]
python = "^3.6.2"
Django = ">=2.0.13"
django-ninja = ">=0.13"

[tool.poetry.dev-dependencies]
isort = "^5.9.2"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
