[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-ninja-apikey"
authors = [{name = "Maximilian Wassink", email="wassink.maximilian@protonmail.com"}]
readme = "README.md"
requires-python = "~=3.6.2"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "description"]
keywords = ["django", "rest", "ninja", "auth", "apikey"]
dependencies = [
    "django",
    "django-ninja"
]

[project.urls]
Source = "https://github.com/mawassk/django-ninja-apikey"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "flake8-bandit",
    "mypy",
    "django-stubs",
    ]

[tool.flit.module]
name = "ninja_apikey"